// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGraphQL component Should render error state 1`] = `
<UsersGraphQL
  data={
    Object {
      "error": Object {
        "message": "Error Message",
      },
      "loading": false,
      "users": Array [
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "wer@email.com",
          "fullName": "Wera George",
          "id": "1",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Smit Georgeh",
          "id": "2",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Angl Georgee",
          "id": "3",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Wera George",
          "id": "4",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
      ],
    }
  }
/>
`;

exports[`UserGraphQL component Should render loading state 1`] = `
<UsersGraphQL
  data={
    Object {
      "error": null,
      "loading": true,
      "users": Array [
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "wer@email.com",
          "fullName": "Wera George",
          "id": "1",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Smit Georgeh",
          "id": "2",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Angl Georgee",
          "id": "3",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Wera George",
          "id": "4",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
      ],
    }
  }
/>
`;

exports[`UserGraphQL component Should render users correctly with data 1`] = `
<UsersGraphQL
  data={
    Object {
      "error": null,
      "getUsers": Array [
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "wer@email.com",
          "fullName": "Wera George",
          "id": "1",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Smit Georgeh",
          "id": "2",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Angl Georgee",
          "id": "3",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
        Object {
          "address": "123 Maple St.",
          "address2": "Unit 320",
          "city": "Maperville",
          "email": "weraa@email.com",
          "fullName": "Wera George",
          "id": "4",
          "password": "passw0rd",
          "state": "IL",
          "userType": "caregiver",
          "zip": "22902",
        },
      ],
      "loading": false,
    }
  }
/>
`;

exports[`UserGraphQL component Should render users correctly without data 1`] = `
<UsersGraphQL
  data={
    Object {
      "error": null,
      "getUsers": Array [],
      "loading": false,
    }
  }
/>
`;
